fix scrollbar at portfolio

--- a/src/components/Portofolio/portofolio.scss
+++ b/src/components/Portofolio/portofolio.scss
@@ -50,6 +50,8 @@
       justify-content: center;
       align-items: center;
       flex-wrap: wrap;
+      height: 100%;
+
     }
 
     @include mobile {
